--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,44 +43,44 @@ jobs:
             # No existing tags, set initial version
             NEW_VERSION="v0.0.1"
             echo "NEW_VERSION=${NEW_VERSION}" >> $GITHUB_OUTPUT
-            exit 0
-          fi
-
-          git log ${LATEST_TAG}..HEAD --pretty=format:%s > commits.txt
-          if grep -q '^BREAKING CHANGE:' commits.txt || grep -q '^[a-zA-Z]\+!:' commits.txt; then
-            BUMP="major"
-          elif grep -q '^feat:' commits.txt; then
-            BUMP="minor"
           else
-            BUMP="patch"
-          fi
-          echo "BUMP=${BUMP}" >> $GITHUB_OUTPUT
+            git log ${LATEST_TAG}..HEAD --pretty=format:%s > commits.txt
+            if grep -q '^BREAKING CHANGE:' commits.txt || grep -q '^[a-zA-Z]\+!:' commits.txt; then
+              BUMP="major"
+            elif grep -q '^feat:' commits.txt; then
+              BUMP="minor"
+            else
+              BUMP="patch"
+            fi
+            echo "BUMP=${BUMP}" >> $GITHUB_OUTPUT
 
-          LATEST_VERSION=${LATEST_TAG#v}
-          IFS='.' read -ra VERSION_PARTS <<< "$LATEST_VERSION"
-          MAJOR=${VERSION_PARTS[0]:-0}
-          MINOR=${VERSION_PARTS[1]:-0}
-          PATCH=${VERSION_PARTS[2]:-0}
+            LATEST_VERSION=${LATEST_TAG#v}
+            IFS='.' read -ra VERSION_PARTS <<< "$LATEST_VERSION"
+            MAJOR=${VERSION_PARTS[0]:-0}
+            MINOR=${VERSION_PARTS[1]:-0}
+            PATCH=${VERSION_PARTS[2]:-0}
 
-          case $BUMP in
-            major)
-              NEW_VERSION="$((MAJOR + 1)).0.0"
-              ;;
-            minor)
-              NEW_VERSION="${MAJOR}.$((MINOR + 1)).0"
-              ;;
-            patch)
-              NEW_VERSION="${MAJOR}.${MINOR}.$((PATCH + 1))"
-              ;;
-          esac
-          echo "NEW_VERSION=v${NEW_VERSION}" >> $GITHUB_OUTPUT
-
-          # Check if the calculated version already exists
-          if git rev-parse v$NEW_VERSION >/dev/null 2>&1; then
-            echo "Version v$NEW_VERSION already exists. Incrementing patch version."
-            PATCH=$((PATCH + 1))
-            NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
+            case $BUMP in
+              major)
+                NEW_VERSION="$((MAJOR + 1)).0.0"
+                ;;
+              minor)
+                NEW_VERSION="${MAJOR}.$((MINOR + 1)).0"
+                ;;
+              patch)
+                NEW_VERSION="${MAJOR}.${MINOR}.$((PATCH + 1))"
+                ;;
+            esac
             echo "NEW_VERSION=v${NEW_VERSION}" >> $GITHUB_OUTPUT
+
+            # Check if the calculated version already exists
+            if git rev-parse v$NEW_VERSION >/dev/null 2>&1; then
+              echo "Version v$NEW_VERSION already exists. Incrementing patch version."
+              PATCH=$((PATCH + 1))
+              NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
+              echo "NEW_VERSION=v${NEW_VERSION}" >> $GITHUB_OUTPUT
+            fi
+          fi
 
       - name: Generate Changelog
         id: get_changelog
