--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,6 +43,11 @@ jobs:
             # No existing tags, set initial version
             NEW_VERSION="v0.0.1"
             echo "NEW_VERSION=${NEW_VERSION}" >> $GITHUB_OUTPUT
+            CHANGELOG=$(git log --pretty=format:"- %s")
+            echo "CHANGELOG<<EOF" >> $GITHUB_OUTPUT
+            echo "$CHANGELOG" >> $GITHUB_OUTPUT
+            echo "EOF" >> $GITHUB_OUTPUT
+            exit 0
           else
             git log ${LATEST_TAG}..HEAD --pretty=format:%s > commits.txt
             if grep -q '^BREAKING CHANGE:' commits.txt || grep -q '^[a-zA-Z]\+!:' commits.txt; then
@@ -72,21 +77,24 @@ jobs:
                 ;;
             esac
             echo "NEW_VERSION=v${NEW_VERSION}" >> $GITHUB_OUTPUT
-
-            # Check if the calculated version already exists
-            if git rev-parse v$NEW_VERSION >/dev/null 2>&1; then
-              echo "Version v$NEW_VERSION already exists. Incrementing patch version."
-              PATCH=$((PATCH + 1))
-              NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
-              echo "NEW_VERSION=v${NEW_VERSION}" >> $GITHUB_OUTPUT
-            fi
           fi
+
+          # Check if the calculated version already exists
+          if git rev-parse v$NEW_VERSION >/dev/null 2>&1; then
+            echo "Version v$NEW_VERSION already exists. Incrementing patch version."
+            PATCH=$((PATCH + 1))
+            NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
+            echo "NEW_VERSION=v${NEW_VERSION}" >> $GITHUB_OUTPUT
 
       - name: Generate Changelog
         id: get_changelog
         run: |
           LATEST_TAG=${{ steps.determine_version.outputs.LATEST_TAG }}
-          CHANGELOG=$(git log ${LATEST_TAG}..HEAD --pretty=format:"- %s")
+          if [ "$LATEST_TAG" = "v0.0.0" ]; then
+            CHANGELOG=$(git log --pretty=format:"- %s")
+          else
+            CHANGELOG=$(git log ${LATEST_TAG}..HEAD --pretty=format:"- %s")
+          fi
           echo "CHANGELOG<<EOF" >> $GITHUB_OUTPUT
           echo "$CHANGELOG" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
